--- a/FrontEnd/src/app/components/home/home.component.scss
+++ b/FrontEnd/src/app/components/home/home.component.scss
@@ -3,14 +3,20 @@
     height: 50%;
 }
 
+.home-wrapper {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+
 .chat-list-section {
     height: 100vh;
-    width: 30%;
+    // width: 30%;
 }
 
 .chat-section {
     height: 100vh;
-    width: 70%;
+    // width: 60%;
 }
 
 .chat-list-container {
