--- a/FrontEnd/src/app/components/chat-list/chat-list.component.html
+++ b/FrontEnd/src/app/components/chat-list/chat-list.component.html
@@ -1,18 +1,11 @@
-<p-table [value]="chats">
-    <ng-template pTemplate="header">
-        <tr>
-            <th>Code</th>
-            <th>Name</th>
-            <th>Category</th>
-            <th>Quantity</th>
-        </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-product>
-        <tr>
-            <td>{{product.code}}</td>
-            <td>{{product.name}}</td>
-            <td>{{product.category}}</td>
-            <td>{{product.quantity}}</td>
+<p-table 
+    [value]="chats" 
+    selectionMode="single" 
+    [(selection)]="selectedChat" 
+    (onRowSelect)="selectChat()">
+    <ng-template pTemplate="body" let-chat>
+        <tr [pSelectableRow]="chat">
+            <td>{{ chat.details?.name || chat.participants[0].username }}</td>
         </tr>
     </ng-template>
 </p-table>
