--- a/FrontEnd/src/app/components/home/home.component.html
+++ b/FrontEnd/src/app/components/home/home.component.html
@@ -8,7 +8,10 @@
                 <p-dropdown [options]="users" [(ngModel)]="selectedUser" optionLabel="username"></p-dropdown>
             </div>
             <div class="chat-list-container">
-                <chat-list (chatSelectionChanged)="chatSelectedHandler($event)"></chat-list>
+                <chat-list 
+                    [activeUsers]="activeUsers"
+                    (chatSelectionChanged)="chatSelectedHandler($event)">
+                </chat-list>
             </div>
         </div>
         <div class="chat-section col-sm-8" *ngIf="selectedChat">
