--- a/FrontEnd/src/app/components/home/home.component.scss
+++ b/FrontEnd/src/app/components/home/home.component.scss
@@ -11,12 +11,12 @@
 
 .chat-list-section {
     height: 100vh;
-    // width: 30%;
+    width: 32%;
 }
 
 .chat-section {
     height: 100vh;
-    // width: 60%;
+    width: 63%;
 }
 
 .chat-list-container {
