Simplified the creation of a chat.

--- a/FrontEnd/src/app/components/auth/login/login.component.html
+++ b/FrontEnd/src/app/components/auth/login/login.component.html
@@ -36,7 +36,7 @@
                     pRipple 
                     type="button" 
                     label="Login"
-                    class="btn btn-primary btn-block w-100"
+                    class="p-button-raised w-100"
                     (click)="login()">
                 </button>
             </div>
